2019-06-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c,
	  src/pdk/peep.h,
	  src/pdk/peep.c:
	  notUsed() and notUsedFrom() for flags.
	* src/stm8/peep.c,
	  src/z80/peep.c:
	  Fixes for notUsedFrom().

2019-06-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/wchar.h,
	  device/lib/mbrtowc.c,
	  device/lib/mbtowc.c,
	  device/lib/wctomb.c,
	  support/regression/tests/constantRange.c,
	  support/regression/tests/driverstruct.c,
	  support/regression/tests/float.c,
	  support/regression/tests/nullstring.c,
	  support/regression/tests/snprintf.c:
	  Library and test improvements, from patch by Gonzalo Pérez de Olaguer Córdoba.
	* src/pic14/glue.c,
	  src/pic14/main.c:
	  Predefined macros for pic14 variants, patch by Gonzalo Pérez de Olaguer Córdoba.
	* device/lib/clean.mk:
	  Cleanup pdk13 library files.
	* device/include/asm/pic14/features.h,
	  device/include/pic14,
	  device/lib/pic14,
	  src/SDCCsymt.c,
	  src/pic14/main.c:
	  pic14 library cleanup, patch by Gonzalo Pérez de Olaguer Córdoba.
	* sdas/asz80/z80mch.c:
	  Fix bug #2910.
	* src/pdk/gen.c:
	  Use xch for wide in-place shift by 8.

2019-06-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regress/tests/gcc-torture-execute-pr34456.c:
	  added missing __reentrant and re-enabled for ds390

2019-06-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bugs-1596270-1736867.c:
	  re-enable test for ds390; it passes now

2019-05-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/gen.c: fix assignment into far space from dph/dpl
	* src/mcs51/peep.c: fix bug #2909

2019-05-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Improve arithmetic right shift.
	* src/hc08/gen.c:
	  Minor improvements suggested by Tony Papadimitriou.
	* src/stm8/gen.c,
	  support/regression/tests/gcc-torture-execute-stdarg-5.c:
	  Improve addition flexibility wrt. register assignment.
