@@ -1,6 +1,12 @@
 // peeph.def - PDK peephole rules
 
 replace restart {
+	mov	%1, %2
+} by {
+	; peephole 0 removed dead load into %1 from %2.
+} if notUsed(%1)
+
+replace restart {
 	mov	%1, a
 	mov	a, %1
 } by {
