@@ -2,8 +2,9 @@
 
 	* src/pdk/main.c,
 	  src/pdk/peep.h,
-	  src/pdk/peep.c:
-	  notUsed() and notUsedFrom() for flags.
+	  src/pdk/peep.c,	
+	  src/pdk/peeph.def:
+	  notUsed() and notUsedFrom().
 	* src/stm8/peep.c,
 	  src/z80/peep.c:
 	  Fixes for notUsedFrom().
